# learning_ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  schemas.py
app/agents/: runner.py  tools.py
app/api/: routes.py
app/core/: config.py
migrations/: 001_initial_schema.sql
scripts/: migrate.py  seed.py
tests/: test_runner.py
